--- a/API/RoundTheCorner/Views/Home/AboutUs.cshtml
+++ b/API/RoundTheCorner/Views/Home/AboutUs.cshtml
@@ -6,9 +6,26 @@
 <h1>About Us</h1>
 <div class=" card card-body">
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dolor turpis, ultrices sit amet leo sed, interdum suscipit dui. Proin lobortis interdum augue, a iaculis turpis mollis eget. Donec auctor ligula ut purus pulvinar, sit amet tincidunt massa tristique. Vestibulum sed hendrerit ligula. Duis libero sapien, porttitor vitae nulla at, iaculis ullamcorper nisl. Sed a augue non sem dignissim mattis dictum sed leo. Duis quis purus libero. Pellentesque pulvinar arcu libero, et accumsan tortor euismod nec. Nulla id nisi id ipsum finibus sagittis ornare convallis lacus. Donec commodo lacus id quam sodales venenatis. Etiam ac eros sed tellus viverra hendrerit vel nec velit.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        Morbi dolor turpis, ultrices sit amet leo sed, interdum suscipit dui. 
+        Proin lobortis interdum augue, a iaculis turpis mollis eget. Donec auctor ligula ut purus pulvinar, 
+        sit amet tincidunt massa tristique. Vestibulum sed hendrerit ligula. 
+        Duis libero sapien, porttitor vitae nulla at, iaculis ullamcorper nisl. 
+        Sed a augue non sem dignissim mattis dictum sed leo. Duis quis purus libero. 
+        Pellentesque pulvinar arcu libero, et accumsan tortor euismod nec. 
+        Nulla id nisi id ipsum finibus sagittis ornare convallis lacus. 
+        Donec commodo lacus id quam sodales venenatis. 
+        Etiam ac eros sed tellus viverra hendrerit vel nec velit.
     </p>
     <p>
-        Curabitur at enim nunc. Maecenas diam tortor, blandit nec magna quis, auctor tempor mauris. Donec gravida arcu et tellus lacinia, id vehicula diam luctus. Nunc ornare erat sit amet odio scelerisque dictum. Quisque risus erat, pellentesque et elementum at, sodales vitae nunc. Integer in erat libero. In urna sem, bibendum et bibendum ut, imperdiet at elit. Phasellus sollicitudin, nibh ac maximus tincidunt, felis lorem pharetra eros, nec elementum sem velit sit amet orci. Vestibulum vulputate efficitur nisi, eget sodales ligula commodo sit amet. Duis at cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas est neque, lacinia a lobortis eu, faucibus ac quam. Aenean non mi enim.
+        Curabitur at enim nunc. Maecenas diam tortor, blandit nec magna quis, 
+        auctor tempor mauris. Donec gravida arcu et tellus lacinia, id vehicula diam luctus.
+        Nunc ornare erat sit amet odio scelerisque dictum. 
+        Quisque risus erat, pellentesque et elementum at, sodales vitae nunc. 
+        Integer in erat libero. In urna sem, bibendum et bibendum ut, imperdiet at elit. 
+        Phasellus sollicitudin, nibh ac maximus tincidunt, felis lorem pharetra eros,
+        nec elementum sem velit sit amet orci. Vestibulum vulputate efficitur nisi,
+        eget sodales ligula commodo sit amet. Duis at cursus velit. Vestibulum ante 
+        ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; 
     </p>
 </div>
