--- a/API/RoundTheCorner.MVCUI/Views/User/UserRegistration.cshtml
+++ b/API/RoundTheCorner.MVCUI/Views/User/UserRegistration.cshtml
@@ -1,40 +1,59 @@
-﻿@{
-    ViewData["Title"] = "Registration Page";
+﻿@model RoundTheCorner.BL.Models.UserModel
+@{
+    ViewBag.Title = "UserRegistration";
 }
 
-<div class="text-center">
-    <img src="~/pictures/roundcornerplaceholder.jpg" width="100" />
-    
+<h2>UserRegistration</h2>
 
-</div>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
-
-<div class="card   text-center">
-    <div class="card-header">
-        <h3>Register with us!</h3>
+<div class="form-horizontal">
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+        </div>
     </div>
-    <div class="card-body"></div>
-    <form>
-        <label>First Name</label>
-        <input class="form-control" style=" width: 70%; margin:0 auto; "/>
-        </br>
-        <label>Last Name</label>
-        <input class="form-control" style=" width: 70%; margin:0 auto; " />
-        </br>
-        <label>Email</label>
-        <input type="email" class="form-control" style="width:70%; margin:0 auto;" />
-        <br />
-        <label>Email Confirmation</label>
-        <input type="email" class="form-control" style="width:70%; margin:0 auto;" />
-        <br />
-        <label>Password</label>
-        <input type="password" class="form-control" style="width:70%; margin:0 auto;" />
-        <br />    
-        <label>Password Confirmation</label>
-        <input type="password" class="form-control" style="width:70%; margin:0 auto;" />
-        <br />
+    <div class="form-group">
+        @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.DOB, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.DOB, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.DOB, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Phone, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
+        </div>
         <button class="btn btn-primary">Register</button>
-             
-    </form>
+    </div>
 </div>
-
+        
+}
