--- a/API/RoundTheCorner.MVCUI/Views/User/UserRegistration.cshtml
+++ b/API/RoundTheCorner.MVCUI/Views/User/UserRegistration.cshtml
@@ -52,8 +52,11 @@
             @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
         </div>
-        <button class="btn btn-primary">Register</button>
+    </div>
+    <div class=" form-group">
+       <button class="btn btn-primary">Register</button>
     </div>
 </div>
         
 }
+@Html.ActionLink("LogIn", "User")
