--- a/API/RoundTheCorner.MVCUI/Views/Home/Index.cshtml
+++ b/API/RoundTheCorner.MVCUI/Views/Home/Index.cshtml
@@ -1,29 +1,53 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IEnumerable<RoundTheCorner.MVCUI.Models.ViewModels.VendorCuisineLocationRating>
+@{
+    ViewData["Title"] = "FindFood";
 }
 
-<div class="text-center">
-    
-    <h3 class="display-4">Welcome to Round The Corner!</h3>
 
+<h1 class="card card-body text-center">Round The Corner</h1>
+<div class="card card-body">
+    <h2 class="text-center">Find Food Near You</h2>
+
+    <div style="background-color:blue; width:100%; height : 300px ;color:white;">//map will diplay here</div>
+
+    @using (Html.BeginForm("Index", "Home", FormMethod.Get))
+    {
+<p>
+    Cuisine: @Html.TextBox("Cuisine")
+    <input type="submit" value="Search" />
+</p>
+    }
+
+    <table class=" table table-sm table-striped table-bordered">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Cuisine</th>
+                <th>Location</th>
+                <th>Rating</th>
+            </tr>
+        </thead>
+        <tbody>
+            @{
+                foreach (RoundTheCorner.MVCUI.Models.ViewModels.VendorCuisineLocationRating item in Model)
+                {
+                    if (ViewBag.Cuisine == null || ViewBag.Cuisine == item.Cuisine.CuisineName)
+                    {
+                    
+                        <tr>
+                        
+                            <td><a href="/Menu/Details/@item.Vendor.VendorID" runat="server">@item.Vendor.CompanyName</a></td>
+                            <td>@item.Cuisine.CuisineName</td>
+                            <td>@item.Location</td>
+                            <td>@item.Rating.ToString("#.#") stars</td>
+                        </tr>
+                    }
+                }
+            }
+
+        </tbody>
+    </table>
 </div>
 
 
-<div class="card   text-center">
-    <div class="card-header">
-        <h3>Login</h3>
-    </div>
-    <div class="card-body"></div>
-    <form>
-        <label>Email</label>
-        <input type ="email" class="form-control" style="width:70%; margin:0 auto;"/>
-        <br/>
-        <label>Password</label>
-        <input type="password" class="form-control" style="width:70%; margin:0 auto;"/>
-        <br/>
-        <button class="btn btn-primary">Login</button>
-        <br/>
-        <a href="/User/UserRegistration" runat="server">Click HERE to register</a>
-    </form>
-</div>
 
