--- a/API/RoundTheCorner.MVCUI/Views/Shared/_Layout.cshtml
+++ b/API/RoundTheCorner.MVCUI/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background-image:url('/Images/foodflipper.gif'); background-size:cover; background-position:center; background-repeat:no-repeat;">
     <div class="wrapper">
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -30,7 +30,7 @@
                                 <a class="nav-link" runat="server" href="/Home/AboutUs">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" runat="server" href="/Vendor/FindFood">Find Food</a>
+                                <a class="nav-link" runat="server" href="/">Find Food</a>
                             </li>
                             @{ 
                                 if (!RoundTheCorner.MVCUI.Models.Authenticate.IsAuthenticated())
