--- a/API/RoundTheCorner.MVCUI/Views/Admin/Vendor.cshtml
+++ b/API/RoundTheCorner.MVCUI/Views/Admin/Vendor.cshtml
@@ -25,7 +25,7 @@
                         <td>@item.LicenseNumber</td>
                         <td>@item.InspectionDate</td>
                         <td>@item.Confirmed</td>
-                        <td><a class="btn btn-secondary" href="/Admin/Vendor/@item.VendorID">Edit</a></td>
+                        <td><a class="btn btn-secondary" href="/Admin/VendorManagement/@item.VendorID">Edit</a></td>
                     </tr>                
             }
         }
