--- a/API/RoundTheCorner.MVCUI/Views/Menu/Confirmed.cshtml
+++ b/API/RoundTheCorner.MVCUI/Views/Menu/Confirmed.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Confirmed";
     
 }
-
-<h2>Confirmed!</h2>
-<p> You have completed the order!</p>
+    <div class="card card-body">
+        <h2>Confirmed!</h2>
+        <p> You have completed the order!</p>
+    </div>
