--- a/API/RoundTheCorner.MVCUI/Views/Shared/_Layout.cshtml
+++ b/API/RoundTheCorner.MVCUI/Views/Shared/_Layout.cshtml
@@ -54,12 +54,21 @@
         <footer class="border-top text-muted dark-footer">
             <div class="container">
                 &copy; 2020 - RoundTheCorner - <a href="/Home/Privacy" runat="server">Privacy</a>
-                - <a href = "/Vendor/VendorRegistration" runat = "server" > Vendor Registration </a >
                 @{
                     if (RoundTheCorner.MVCUI.Models.Authenticate.IsAdmin())
                     {
-                       @: - <a href = "/Admin/Index" runat = "server" > Admin Panel </a >
+                       @: - <a href = "/Admin/Index" runat = "server" > Admin Panel </a>
                     }
+                }
+                @{
+                    if (RoundTheCorner.MVCUI.Models.Authenticate.IsVendorOwner())
+                    {
+                       @: - <a href = "/Vendor/VendorMenus" runat = "server" > Vendor Panel </a>
+                    }
+					else
+					{
+                       @:- <a href = "/Vendor/VendorRegistration" runat = "server" > Vendor Registration </a>
+					}
                 }
             </div>
         </footer>
