--- a/API/RoundTheCorner.MVCUI/Views/Admin/VendorManagement.cshtml
+++ b/API/RoundTheCorner.MVCUI/Views/Admin/VendorManagement.cshtml
@@ -55,8 +55,7 @@
                 </div>
             </div>
             <div class=" form-group">
-                <button class="btn btn-primary">Update</button>
-                <a href="/Admin/VendorManagement/@Model.VendorID?Confirm=true" class="btn btn-secondary">Confirm?</a>
+                <a href="/Admin/VendorManagement/@Model.VendorID?Confirm=true" class="btn btn-primary">Confirm?</a>
             </div>
         </div>
 
