--- a/API/RoundTheCorner.MVCUI/Views/Admin/Index.cshtml
+++ b/API/RoundTheCorner.MVCUI/Views/Admin/Index.cshtml
@@ -1,8 +1,36 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+	ViewBag.Title = "Index";
+	Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Admin</h2>
+<h2>Admin Panel - Index</h2>
 
+<div class="row">
+	<div class="col-md-6 mb-4">
+		<div class="card">
+			<div class="card-header">
+				Vendors
+			</div>
+
+			<div class="card-body">
+				<h5 class="card-title">Manage Vendors</h5>
+				<p>Manage the vendoros that are on Round The Corner!</p>
+				@Html.ActionLink("Go There", "Vendor", "Admin", new { @class = "btn btn-primary" })
+			</div>
+		</div>
+	</div>
+	<div class="col-md-6 mb-4">
+		<div class="card ">
+			<div class="card-header">
+				Users
+			</div>
+
+			<div class="card-body">
+				<h5 class="card-title">Manage Users</h5>
+				<p>Manage the Users that are on Round The Corner!</p>
+				@Html.ActionLink("Go There", "UserManagement", "Admin", new { @class = "btn btn-primary" })
+			</div>
+		</div>
+	</div>
+</div>
