--- a/API/RoundTheCorner.MVCUI/Views/Admin/UserManagement.cshtml
+++ b/API/RoundTheCorner.MVCUI/Views/Admin/UserManagement.cshtml
@@ -1,58 +1,47 @@
 ﻿@model IEnumerable<RoundTheCorner.BL.Models.UserModel>
 
 @{
-    ViewBag.Title = "UserManagement";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+	ViewBag.Title = "UserManagement";
+	Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h2>UserManagement</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>      
-        <th>
-            @Html.DisplayNameFor(model => model.Deactivated)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Admin)
-        </th>
-        <th></th>
-    </tr>
+	<tr>
+		<th>
+			@Html.DisplayNameFor(model => model.FirstName)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.LastName)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.Email)
+		</th>
+		<th></th>
+	</tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Deactivated)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Admin)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "UserEdit", new { id=item.UserID }) |
-            @Html.ActionLink("Details", "UserDetails", new { id=item.UserID }) |
-            @Html.ActionLink("Delete", "UserDelete", new { id=item.UserID })
-        </td>
-    </tr>
-}
+	@foreach (var item in Model)
+	{
+		<tr>
+			<td>
+				@Html.DisplayFor(modelItem => item.FirstName)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.LastName)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.Email)
+			</td>
+			<td>
+				@Html.ActionLink("Edit", "UserEdit", new { id = item.UserID }) |
+				@Html.ActionLink("Details", "UserDetails", new { id = item.UserID }) |
+				@Html.ActionLink("Delete", "UserDelete", new { id = item.UserID })
+			</td>
+		</tr>
+	}
 
 </table>
+
+
+@Html.ActionLink("Go Back", "Index", "Admin", new { @class = "btn btn-primary" })
