--- a/API/RoundTheCorner.MVCUI/Views/Home/Index.cshtml
+++ b/API/RoundTheCorner.MVCUI/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="card card-body">
     <h2 class="text-center">Find Food Near You</h2>
 
-    <div style="background-color:blue; width:100%; height : 300px ;color:white;">//map will diplay here</div>
+    <div style="background-color:blue; width:100%; height : 300px ;color:white;background-image: url('../../Images/Map.png')"></div>
 
     @using (Html.BeginForm("Index", "Home", FormMethod.Get))
     {
