--- a/API/RoundTheCorner.MVCUI/Views/Shared/_AdminLayout.cshtml
+++ b/API/RoundTheCorner.MVCUI/Views/Shared/_AdminLayout.cshtml
@@ -17,19 +17,12 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <img src="~/Images/roundcornerplaceholder.png" width="50" />
-                <a class="navbar-brand" runat="server" href="/">Round The Corner Admin</a>
+                <a class="navbar-brand" runat="server" href="/">Round The Corner</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <!--Our layout in home-->
-                        <li class="nav-item">
-                            <a class="nav-link" runat="server" href="/Admin/Vendor">Vendor Information</a>
-                            <a class="nav-link" runat="server" href="/Admin/UserManagement">User Management</a>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </nav>
