--- a/API/RoundTheCorner.MVCUI/Views/Shared/_AdminLayout.cshtml
+++ b/API/RoundTheCorner.MVCUI/Views/Shared/_AdminLayout.cshtml
@@ -27,8 +27,12 @@
             </div>
         </nav>
     </header>
-    <div>
-        @RenderBody()
+	<div>
+		<div class="container" style="margin-top: 10px;">
+			<main role="main" class="pb-3">
+				@RenderBody()
+            </main>
+		</div>
     </div>
 </body>
 
