--- a/API/RoundTheCorner.MVCUI/Views/Admin/VendorManagement.cshtml
+++ b/API/RoundTheCorner.MVCUI/Views/Admin/VendorManagement.cshtml
@@ -10,54 +10,63 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.CompanyName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CompanyName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CompanyName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.CompanyEmail, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CompanyEmail, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CompanyEmail, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.Bio, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Bio, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Bio, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.InspectionDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.InspectionDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.InspectionDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.LicenseNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.LicenseNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LicenseNumber, "", new { @class = "text-danger" })
-            </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.Website, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Website, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Website, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class=" form-group">
-                <a href="/Admin/VendorManagement/@Model.VendorID?Confirm=true" class="btn btn-primary">Confirm?</a>
-            </div>
-        </div>
+<div class="form-horizontal">
+	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+	<div class="form-group">
+		@Html.LabelFor(model => model.CompanyName, htmlAttributes: new { @class = "control-label col-md-2 font-weight-bold" })
+		<div class="col-md-10">
+			@Html.DisplayFor(model => model.CompanyName, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.CompanyName, "", new { @class = "text-danger" })
+		</div>
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.CompanyEmail, htmlAttributes: new { @class = "control-label col-md-2 font-weight-bold" })
+		<div class="col-md-10">
+			@Html.DisplayFor(model => model.CompanyEmail, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.CompanyEmail, "", new { @class = "text-danger" })
+		</div>
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.Bio, htmlAttributes: new { @class = "control-label col-md-2 font-weight-bold" })
+		<div class="col-md-10">
+			@Html.DisplayFor(model => model.Bio, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.Bio, "", new { @class = "text-danger" })
+		</div>
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.InspectionDate, htmlAttributes: new { @class = "control-label col-md-2 font-weight-bold" })
+		<div class="col-md-10">
+			@Html.DisplayFor(model => model.InspectionDate, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.InspectionDate, "", new { @class = "text-danger" })
+		</div>
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.LicenseNumber, htmlAttributes: new { @class = "control-label col-md-2 font-weight-bold" })
+		<div class="col-md-10">
+			@Html.DisplayFor(model => model.LicenseNumber, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.LicenseNumber, "", new { @class = "text-danger" })
+		</div>
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.Website, htmlAttributes: new { @class = "control-label col-md-2 font-weight-bold" })
+		<div class="col-md-10">
+			@Html.DisplayFor(model => model.Website, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.Website, "", new { @class = "text-danger" })
+		</div>
+	</div>
+	@if (Model.Confirmed != true)
+	{
+		<div class=" form-group">
+			<a href="/Admin/VendorManagement/@Model.VendorID?Confirm=true" class="btn btn-primary">Confirm?</a>
+		</div>
+	}
+	else
+	{
+		<div class=" form-group">
+			<a href="/Admin/VendorManagement/@Model.VendorID?Confirm=false" class="btn btn-primary">Unconfirm?</a>
+		</div>
+	}
+</div>
 
 }
 @Html.ActionLink("Back to List", "Vendor", "Admin")
