--- a/API/RoundTheCorner.MVCUI/Views/ShoppingCart/CartDisplay.cshtml
+++ b/API/RoundTheCorner.MVCUI/Views/ShoppingCart/CartDisplay.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RoundTheCorner.BL.Models.Cart
 
 <div>
-    <h4>Total Count:@Model.TotalCount - Total Price: @Model.TotalCost</h4>
+    <h4>Total Count:@Model.TotalCount - Total Price: $@Model.TotalCost.ToString("0.00")</h4>
     @{ 
         foreach (var item in Model.Items)
         {
