--- a/API/RoundTheCorner.MVCUI/Views/User/LogIn.cshtml
+++ b/API/RoundTheCorner.MVCUI/Views/User/LogIn.cshtml
@@ -1,6 +1,8 @@
 ﻿@model RoundTheCorner.BL.Models.UserModel
 
     <div class="card card-body">
+        <h2>Log In</h2>
+        <hr />
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
